--- a/ejemplo01.html
+++ b/ejemplo01.html
@@ -5,9 +5,9 @@
   <title>PImiprimeraApp</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="css/estilos.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-  <app-root></app-root>
+	<h1>Proyecto empresarial</h1>
 </body>
 </html>
